Add NotifyIcon Switch  Example

--- a/TestDemo/Demos/NotifyIconDemo.xaml
+++ b/TestDemo/Demos/NotifyIconDemo.xaml
@@ -10,7 +10,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-        <pc:TaskbarIcon x:Name="DefaultNotifyIcon" Visibility="Visible"
+        <pc:TaskbarIcon x:Name="DefaultNotifyIcon" Visibility="Collapsed"
                         IsStartTaskbarFlash="True"
                         ToolTipText="CookPopularControl" 
                         IconSource="../Resources/Gif/CookCSharp.ico"
@@ -32,12 +32,20 @@
             </pc:TaskbarIcon.TrayToolTip>
         </pc:TaskbarIcon>
 
-        <WrapPanel>
-            <TextBlock Text="开启系统托盘菜单闪烁" VerticalAlignment="Center" Foreground="Red" FontSize="16" FontWeight="DemiBold"/>
-            <pc:SwitchControl Width="100" Height="35" Margin="10,0"
+        <StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="开启系统托盘菜单" VerticalAlignment="Center" Foreground="Red" FontSize="16" FontWeight="DemiBold"/>
+                <pc:SwitchControl Width="100" Height="35" Margin="10,0"
+                                  Background="Red" SwicthCloseBackground="LightBlue"
+                                  Click="Button_Click_1" Style="{StaticResource DefaultSwitchControlStyle}"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="0,20">
+                <TextBlock Text="开启系统托盘菜单闪烁" VerticalAlignment="Center" Foreground="Red" FontSize="16" FontWeight="DemiBold"/>
+                <pc:SwitchControl Width="100" Height="35" Margin="10,0"
                                   Background="Red" SwicthCloseBackground="LightBlue"
                                   Click="Button_Click_2" Style="{StaticResource DefaultSwitchControlStyle}"/>
-        </WrapPanel>
+            </StackPanel>
+        </StackPanel>
     </StackPanel>
 
 </UserControl>
