--- a/CookPopularControl/Themes/DefaultPopularControl.xaml
+++ b/CookPopularControl/Themes/DefaultPopularControl.xaml
@@ -12,7 +12,8 @@
                     xmlns:swiper="clr-namespace:CookPopularControl.Controls.Swiper"
                     xmlns:carousel="clr-namespace:CookPopularControl.Controls.CarouselView"
                     xmlns:player="clr-namespace:CookPopularControl.Controls.MediaPlayer"
-                    xmlns:star="clr-namespace:CookPopularControl.Controls.Starred">
+                    xmlns:star="clr-namespace:CookPopularControl.Controls.Starred"
+                    xmlns:label="clr-namespace:CookPopularControl.Controls.Labels">
 
     <ResourceDictionary.MergedDictionaries>
         <!--Original Control-->
@@ -39,7 +40,9 @@
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/MenuStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/TabControlStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/ExpanderStyle.xaml" />
-
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/LabelStyle.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BorderStyle.xaml" />
+        
         <!--Template-->
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/NotifyStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BaseStyle/ValidationErrorBaseTemplate.xaml" />
@@ -90,6 +93,7 @@
     <Style x:Key="{x:Type Menu}" TargetType="{x:Type Menu}" BasedOn="{StaticResource DefaultMenuStyle}"/>
     <Style x:Key="{x:Type TabControl}" TargetType="{x:Type TabControl}" BasedOn="{StaticResource DefaultTabControlStyle}"/>
     <Style x:Key="{x:Type Expander}" TargetType="{x:Type Expander}" BasedOn="{StaticResource DefaultExpanderStyle}"/>
+    <Style x:Key="{x:Type Label}" TargetType="{x:Type Label}" BasedOn="{StaticResource DefaultLabelStyle}"/>
 
 
     <Style x:Key="{x:Type animation:AnimationPath}" TargetType="{x:Type animation:AnimationPath}" BasedOn="{StaticResource DefaultAnimationPathStyle}"/>
@@ -112,5 +116,6 @@
     <Style x:Key="{x:Type carousel:CarouselView}" TargetType="{x:Type carousel:CarouselView}" BasedOn="{StaticResource DefaultCarouselViewStyle}"/>
     <Style x:Key="{x:Type player:MediaPlayer}" TargetType="{x:Type player:MediaPlayer}" BasedOn="{StaticResource DefaultMediaPlayerStyle}"/>
     <Style x:Key="{x:Type star:Star}" TargetType="{x:Type star:Star}" BasedOn="{StaticResource DefaultStarStyle}"/>
+    <Style x:Key="{x:Type label:GroupLabel}" TargetType="{x:Type label:GroupLabel}" BasedOn="{StaticResource DefaultGroupLabelStyle}"/>
 
 </ResourceDictionary>
