Add SearchControl and Test SearchControlDemo

--- a/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
@@ -51,7 +51,7 @@
                             <ScrollViewer x:Name="PART_ContentHost" Focusable="False" Background="Transparent"
                                           HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"
                                           UseLayoutRounding="{TemplateBinding UseLayoutRounding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                            <TextBlock x:Name="PART_PlaceHolder"
+                            <TextBlock x:Name="PART_PlaceHolder" Margin="2,0,0,0"
                                        Text="{TemplateBinding attached:TextElementAttached.PlaceHolder}" 
                                        Foreground="{TemplateBinding attached:TextElementAttached.PlaceHolderBrush}" 
                                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
