--- a/CookPopularControl/Themes/BaseStyle/TextBoxBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/TextBoxBaseStyle.xaml
@@ -14,7 +14,7 @@
         <Setter Property="BorderBrush" Value="{DynamicResource FieldBorderBrush}" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="HorizontalContentAlignment" Value="Left" />
-        <Setter Property="Padding" Value="8,0,0,0" />   
+        <Setter Property="Padding" Value="8,0,0,0" />
         <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ValidationErrorBaseTemplate}" />
         <Setter Property="Template">
             <Setter.Value>
@@ -29,7 +29,7 @@
                             <ScrollViewer x:Name="PART_ContentHost" Focusable="False" Background="Transparent"
                                           HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"
                                           UseLayoutRounding="{TemplateBinding UseLayoutRounding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                            <TextBlock x:Name="PART_PlaceHolder"
+                            <TextBlock x:Name="PART_PlaceHolder" Margin="2,0,0,0"
                                        Text="{TemplateBinding attached:TextElementAttached.PlaceHolder}" 
                                        Foreground="{TemplateBinding attached:TextElementAttached.PlaceHolderBrush}" 
                                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
