--- a/CookPopularControl/Themes/DefaultPopularControl.xaml
+++ b/CookPopularControl/Themes/DefaultPopularControl.xaml
@@ -13,7 +13,8 @@
                     xmlns:carousel="clr-namespace:CookPopularControl.Controls.CarouselView"
                     xmlns:player="clr-namespace:CookPopularControl.Controls.MediaPlayer"
                     xmlns:star="clr-namespace:CookPopularControl.Controls.Starred"
-                    xmlns:label="clr-namespace:CookPopularControl.Controls.Labels">
+                    xmlns:label="clr-namespace:CookPopularControl.Controls.Labels"
+                    xmlns:groupCtl="clr-namespace:CookPopularControl.Controls.GroupControls">
 
     <ResourceDictionary.MergedDictionaries>
         <!--Original Control-->
@@ -56,6 +57,7 @@
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/CarouselViewStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/MediaPlayerStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/StarredStyle.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/GroupControlsStyle.xaml" />
 
         <!--Other Resource Dictionaries-->
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/GeometryFigure.xaml"/>
@@ -117,5 +119,8 @@
     <Style x:Key="{x:Type player:MediaPlayer}" TargetType="{x:Type player:MediaPlayer}" BasedOn="{StaticResource DefaultMediaPlayerStyle}"/>
     <Style x:Key="{x:Type star:Star}" TargetType="{x:Type star:Star}" BasedOn="{StaticResource DefaultStarStyle}"/>
     <Style x:Key="{x:Type label:GroupLabel}" TargetType="{x:Type label:GroupLabel}" BasedOn="{StaticResource DefaultGroupLabelStyle}"/>
+
+
+    <Style x:Key="{x:Type groupCtl:SearchControl}" TargetType="{x:Type groupCtl:SearchControl}" BasedOn="{StaticResource DefaultSearchControlStyle}"/>
 
 </ResourceDictionary>
