--- a/CookPopularControl/Themes/BaseStyle/ComboBoxBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/ComboBoxBaseStyle.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:ripple="clr-namespace:CookPopularControl.Controls.Ripple"
+                    xmlns:simpleGird="clr-namespace:CookPopularControl.Controls.Panels"
                     xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached"                 
                     xmlns:assistant="clr-namespace:CookPopularControl.Controls.ComboBox"
                     xmlns:commonConverters="clr-namespace:CookPopularControl.Communal.Converters"
@@ -91,6 +92,7 @@
 
     <!--SimpleComboBox-->
     <Style x:Key="ComboBoxBaseStyle" TargetType="{x:Type ComboBox}">
+        <Setter Property="Height" Value="{DynamicResource DefaultControlHeight}" />
         <Setter Property="Background" Value="{DynamicResource DefaultBackgroundBrush}"/>
         <Setter Property="Foreground" Value="{DynamicResource PrimaryForeground}"/>
         <Setter Property="BorderThickness" Value="1" />
@@ -115,25 +117,23 @@
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type ComboBoxItem}">
-                                <Border x:Name="ItemBorder" Background="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.ItemsListBackground)}" Margin="0,0,1,0">
-                                    <Grid>
-                                        <ripple:Ripple ContentTemplate="{TemplateBinding ContentTemplate}" Focusable="False"
-                                           ContentStringFormat="{TemplateBinding ContentStringFormat}"
-                                           HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                           VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                                           Padding="{TemplateBinding Padding}" Background="Transparent"
-                                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                                           Visibility="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListBox},Path=(ripple:RippleAssist.IsDisabled),Converter={toolsConverters:BooleanToVisibilityReConverter}}"/>
-                                        <ContentPresenter Content="{Binding Content, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                <simpleGird:SimpleGrid x:Name="ItemGrid" Margin="0,0,1,0">
+                                    <ripple:Ripple ContentTemplate="{TemplateBinding ContentTemplate}" Focusable="False"
+                                                   ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                                   HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                   VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                   Padding="{TemplateBinding Padding}" Background="Transparent"
+                                                   SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                                   Visibility="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListBox},Path=(ripple:RippleAssist.IsDisabled),Converter={toolsConverters:BooleanToVisibilityReConverter}}"/>
+                                    <ContentPresenter Content="{Binding Content, RelativeSource={RelativeSource Mode=TemplatedParent}}"
                                                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                                       HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                                       Margin="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=Padding}"/>
-                                    </Grid>
-                                </Border>
+                                </simpleGird:SimpleGrid>
                                 <ControlTemplate.Triggers>
                                     <Trigger Property="IsMouseOver" Value="true">
                                         <Setter Property="Foreground" Value="{DynamicResource AssistantForeground}" />
-                                        <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.ItemMouseOverBackground)}" TargetName="ItemBorder"/>
+                                        <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.ItemMouseOverBackground)}" TargetName="ItemGrid"/>
                                     </Trigger>
                                 </ControlTemplate.Triggers>
                             </ControlTemplate>
@@ -195,16 +195,18 @@
                                               IsChecked="{Binding Path=IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"/>
                             </WrapPanel>
                             <Popup x:Name="PART_Popup" IsOpen="{TemplateBinding IsDropDownOpen}" PopupAnimation="Slide" Placement="Bottom"
-                                   HorizontalOffset="-1" VerticalOffset="0" AllowsTransparency="True" >
-                                <Border x:Name="PopupBorder" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"                                          
+                                   HorizontalOffset="-1" VerticalOffset="0" AllowsTransparency="True">
+                                <Border x:Name="PopupBorder" Margin="5"
+                                        BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"   
+                                        Background="{TemplateBinding attached:SelectorAttached.ItemsListBackground}"
                                         Width="{Binding ElementName=PART_Border,Path=ActualWidth}" MaxHeight="{TemplateBinding MaxDropDownHeight}"
-                                        Margin="1" Effect="{TemplateBinding assistant:ComboBoxAssistant.ComboBoxPopupListShadow}" >
+                                        CacheMode="{DynamicResource DefaultBitmapCache}" Effect="{TemplateBinding assistant:ComboBoxAssistant.ComboBoxPopupListShadow}" >
                                     <Border.RenderTransform>
                                         <TransformGroup>
                                             <ScaleTransform ScaleX="0" ScaleY="0"/>
                                         </TransformGroup>
                                     </Border.RenderTransform>
-                                    <ScrollViewer x:Name="DropDownScorllViewer" CanContentScroll="True" SnapsToDevicePixels="True"
+                                    <ScrollViewer x:Name="DropDownScorllViewer" CanContentScroll="True" SnapsToDevicePixels="True" Margin="0,0,0,5"
                                                   MaxHeight="{TemplateBinding MaxDropDownHeight}" CacheMode="{DynamicResource DefaultBitmapCache}" 
                                                   HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
                                         <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Contained" />
@@ -250,7 +252,7 @@
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="7*" />
-                                <ColumnDefinition Width="3*" />
+                                <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
                             <ripple:Ripple ContentTemplate="{TemplateBinding ContentTemplate}" Focusable="False"
                                            ContentStringFormat="{TemplateBinding ContentStringFormat}"
@@ -263,7 +265,7 @@
                                        Padding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=Padding}"
                                        HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
-                            <Grid Grid.Column="1" x:Name="ItemGrid" HorizontalAlignment="Right" Margin="0,0,10,0"
+                            <Grid Grid.Column="1" x:Name="ItemGrid" HorizontalAlignment="Center" Margin="10,0"
                                   Width="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.ItemControlWidth)}"
                                   Height="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.ItemControlHeight)}">
                                 <CheckBox x:Name="ItemCheckBox" Focusable="True" Width="{Binding ElementName=ItemGrid,Path=Width}" Height="{Binding ElementName=ItemGrid,Path=Height}"
@@ -272,8 +274,9 @@
                                           attached:SelectorAttached.IsCheckBoxChecked="True"
                                           Visibility="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.SelectorItemType),
                                                       Converter={commonConverters:SelectorItemTypeToVisibilityConverter},ConverterParameter=CheckBox}"/>
-                                <Button x:Name="ItemButton" Width="{Binding ElementName=ItemGrid,Path=Width}" Height="{Binding ElementName=ItemGrid,Path=Height}"
+                                <Button x:Name="ItemButton" Width="{Binding ElementName=ItemGrid,Path=ActualWidth}" Height="{Binding ElementName=ItemGrid,Path=ActualHeight}"
                                         Content="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.ButtonContent)}" 
+                                        HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                         attached:FrameworkElementBaseAttached.CornerRadius="2" Focusable="True" ToolTip="Delete"
                                         attached:SelectorAttached.IsButtonDeleteItem="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.IsButtonDeleteItem)}"
                                         attached:ButtonBaseAttached.ButtonBaseMouseOverBackground="{DynamicResource AssistantForeground}"
@@ -343,6 +346,8 @@
 
     <!--MultiComboBox-->
     <Style x:Key="MultiComboBoxBaseStyle" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxBaseStyle}">
+        <Setter Property="Height" Value="{DynamicResource DefaultControlHeight}" />
+        <Setter Property="ripple:RippleAssist.IsDisabled" Value="True" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ComboBox}">
@@ -398,8 +403,9 @@
                             <Popup x:Name="PART_Popup" IsOpen="{TemplateBinding IsDropDownOpen}" PopupAnimation="Slide" Placement="Bottom"
                                    HorizontalOffset="-1" VerticalOffset="0" AllowsTransparency="True">
                                 <Border x:Name="PopupBorder" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"                                            
+                                        Background="{TemplateBinding attached:SelectorAttached.ItemsListBackground}"
                                         Width="{Binding ElementName=PART_Border,Path=ActualWidth}" MaxHeight="{TemplateBinding MaxDropDownHeight}"
-                                        Margin="1" Effect="{TemplateBinding assistant:ComboBoxAssistant.ComboBoxPopupListShadow}">
+                                        Margin="5" CacheMode="{DynamicResource DefaultBitmapCache}" Effect="{TemplateBinding assistant:ComboBoxAssistant.ComboBoxPopupListShadow}">
                                     <Border.RenderTransform>
                                         <TransformGroup>
                                             <ScaleTransform ScaleX="0" ScaleY="0"/>
@@ -408,9 +414,10 @@
                                     <!--ItemsSource="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=Items}"-->
                                     <ListBox x:Name="PART_ListBox" Width="{TemplateBinding Width}" MaxHeight="{TemplateBinding MaxDropDownHeight}"                                            
                                              HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                             VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"                              
-                                             SelectionMode="Extended" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Hidden"
-                                             ItemContainerStyle="{StaticResource MultiComboBoxItemStyle}" ItemTemplate="{TemplateBinding ItemTemplate}"/>
+                                             VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" Margin="0,0,0,5"                             
+                                             SelectionMode="Extended" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                                             ItemContainerStyle="{StaticResource MultiComboBoxItemStyle}" ItemTemplate="{TemplateBinding ItemTemplate}"
+                                             ripple:RippleAssist.IsDisabled="{TemplateBinding ripple:RippleAssist.IsDisabled}"/>
                                 </Border>
                             </Popup>
                         </Grid>
