--- a/CookPopularControl/Themes/ProgressBarStyle.xaml
+++ b/CookPopularControl/Themes/ProgressBarStyle.xaml
@@ -18,7 +18,7 @@
     </Style>
 
     <Style x:Key="CircularProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource CircularProgressBarBaseStyle}">
-        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrushColor}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="assistant:CircularProgressAssistant.ArcThickness" Value="15" />
@@ -36,11 +36,11 @@
 
     <Style x:Key="WaveProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource WaveProgressBarBaseStyle}">
         <Setter Property="BorderThickness" Value="2"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrushColor}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
         <Setter Property="assistant:LinearProgressBarAssistant.IsShowPercent" Value="True" />
         <Setter Property="assistant:LinearProgressBarAssistant.TextColor" Value="{DynamicResource AssistantForeground}" />
         <Setter Property="assistant:WaveProgressBarAssistant.WaveHeight" Value="30" />
-        <Setter Property="assistant:WaveProgressBarAssistant.WaveStroke" Value="{DynamicResource BorderBrushColor}" />
+        <Setter Property="assistant:WaveProgressBarAssistant.WaveStroke" Value="{DynamicResource BorderBrush}" />
         <Setter Property="assistant:WaveProgressBarAssistant.WaveStrokeThickness" Value="2" />
         <Setter Property="FontSize" Value="20" />
     </Style>
